# k-mamba

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CLAUDE.md  CMakeLists.txt  DOCS.md  ESTIMATIONS.md  KIMI-K2.5.md  Makefile  PROMPT_SESSION.md  README.md  SESSION_CONTINUATION.md  TESTS.md  TESTS_GPU.md  TESTS_RESULTS.md  TEST_RESULTS.md  THEORY.md  benchmark_400M_gradual  benchmark_asm  benchmark_asm.c  benchmark_performance  benchmark_performance.c  bissimamba.c  bissimamba.h  build.sh  chat.c  lm.c  lm.h  mamba.c  mamba_chat  mamba_lm_train  optimatrix_bridge.h  test_bissimamba  test_bissimamba.c  test_convnd  test_convnd.c  test_cuda_dim1024  test_forward_complete.c  (+12 more)
bench/: CMakeLists.txt  bench_gpu.cu  bench_gpu.h  bench_paper.c
colab/: README.md  kmamba_colab_500M.ipynb  setup_colab.sh
cpu/: CMakeLists.txt  mamba_scan.c  scan1d_backward.c  scan1d_backward_m.c  scan1d_backward_m1_shared_bc.asm  scan1d_backward_m1_shared_bc_simple.asm
cpu/include/: mamba_scan.h
cuda/: CMakeLists.txt  convnd.cu  mamba_block.cu  mamba_scan.cu  scan1d.cu  scan1d_backward.cu  scan_nd.cu
include/: convnd.h  km_topology.h  kmamba.h  kmamba_cuda_utils.h  kmamba_kernels.h  mamba_scan_cuda.h  optimatrix.h  scan.h  scan.inc  scan_nd.h  types.inc  wavefront_nd.h  wavefront_plan.h
kaggle/: README.md  kmamba_kaggle.ipynb  kmamba_kaggle_500M.ipynb  setup_kaggle.sh  train_kaggle.py
kernels/: activations_f32.c  elementwise_f32.c  gemm_f32.c  init_f32.c  optimizer_f32.c
models/: kmamba_chat.c  kmamba_cpu.c  kmamba_cuda.cu  kmamba_hybrid.c
paper/: kmamba.bib  kmamba.tex
paper_en/: kmamba.tex
paper_fr/: Makefile  kmamba.bib  kmamba.tex
scripts/: install_deps.sh  plot_paper.py
src/: activations.asm  convnd.c  convnd_c_wrapper.c  gemm.asm  gemm_avx2.asm  gemv.asm  gemv_avx2.asm  hadamard.asm  km_topology.c  kmamba.c  kmamba_cuda_utils.c  mamba_block.c  mamba_forward.c  mamba_training.c  scan1d.asm  scan1d_backward.c  scan1d_backward_m.c  scan1d_backward_m1_shared_bc.asm  scan1d_backward_m1_shared_bc_simple.asm  scan1d_c_wrapper.c  scan2d.asm  scan_nd.c  wavefront_nd.c  wavefront_plan.c
tests/: CMakeLists.txt  test_clipping_optimizers  test_clipping_optimizers.c  test_cuda_optimizers.cu  test_cuda_scan.cu  test_cuda_scan_nd.cu  test_cuda_simple  test_cuda_simple.cu  test_optimizers.c  test_phase1.c  test_phase2.c  test_phase3.c  test_phase4.c
tests/end_to_end/: test_kmamba_inference.c  test_kmamba_inference_working.c  test_kmamba_training.c
tests/gpu/: test_gpu_complete.c  test_gpu_simple.cu
tests/integration/: test_benchmarks.c  test_convnd.c
tests/regression/: test_benchmarks.c
tests/unit/: test_convnd_full.c  test_gradient_utils.c  test_mamba_block_topology.c  test_optimizers.c  test_scan1d_backward_asm.c  test_scan_nd.c  test_simple.c  test_utilitaires.c  test_wavefront_nd.c
tokenizer_rs/: Cargo.toml
tokenizer_rs/src/: lib.rs
